tooling/nargo_cli/tests/snapshots/execution_success/loop_keyword/execute__tests__force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/71WsW6DMBA9A4ZQGjVqlw4dunXoYhpaMjL0R6xGfAefXiKd49OT8RBMLKHjuPN79w7boMgPxbagFcOB9GxrtpmI5/M1sG/WjbYG3pT4J9N1dUBfwvqPNWOqbfCNw9+o/6ZinN/J40stjnc3X424fyS/PrbS797flvpfIpob1tqyv4dcgnkEsTzwLIO+ZSI2JNJ0iGjaix6u1XAALHUffdc1UaTH/nLYOj12W84Yr4z1xDyl6B2uK7c3dSA3g5jL/WR7yX1LxFUscH0IrvcIVw6xKlLHDvwyUGNo3S3NowCnBhwVmHfruwrVHeOrInx4plLA17S81zXkGra4f1Kfqc8Cl4CrIf9PUUzp+fuTMY43n3wfZP8I+DXk/7D/sKBjuLHOsbfteLSj/bbnc/dnsU+XIb89/7WqmdndCQAA",
  "debug_symbols": "nZPLroMgEED/ZdYs5CXqrzRNQy1tSAgaqje5afz3Ozpy+0i6YcMRZ87AkMwDLu48304+Xoc7dIcHnJMPwd9OYejt5IeIfx9QrQuX0AkGXBE0oSYY6CSiIbQbhCJgpkI0BIxpBlJAVyMkATMNQhOwZoMwBBJUtWUqTpBbTKHXIjShJqDXLguD3MJpSs6tHbz0hJ2ONrk4QRfnEBj82DBvSffRxo2TTRitGLh4QWLBqw9u/VrY066+q7rZXfOU9bvNv9tcm13nuinxTT6em7bAF5XafcFL7i/0v18X+UZnv+EFvhT5fClFia9E9lXJ+0vDs/9x/yPubO/T24wta6Xk7Tm4fXudY/8SnX7HHMkzOqahd5c5ubXSy6DielAt0+q4rKf9AQ==",
  "file_map": {
    "50": {
      "source": "fn main() {\n    // Safety: test code\n    unsafe {\n        check_loop();\n    }\n\n    check_comptime_loop();\n}\n\nunconstrained fn check_loop() {\n    let mut i = 0;\n    let mut sum = 0;\n\n    loop {\n        if i == 4 {\n            break;\n        }\n\n        if i == 2 {\n            i += 1;\n            continue;\n        }\n\n        sum += i;\n        i += 1;\n    }\n\n    assert_eq(sum, 1 + 3);\n}\n\nfn check_comptime_loop() {\n    comptime {\n        let mut i = 0;\n        let mut sum = 0;\n\n        loop {\n            if i == 4 {\n                break;\n            }\n\n            if i == 2 {\n                i += 1;\n                continue;\n            }\n\n            sum += i;\n            i += 1;\n        }\n\n        assert_eq(sum, 1 + 3);\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
